# zatopos-ear

./: CMakeLists.txt  README.md  main.c
myusb/: CMakeLists.txt  dev_lowlevel.c  main.c
piospi/: CMakeLists.txt  main.c  mcp3008.pio  memo.txt  mic.c  mic.h
spi/: CMakeLists.txt  main.c  main2.c
src/: CMakeLists.txt  common.h  consts.h  dev_lowlevel.h  main.c  main_serial.c  main_usb.c  mcp3002.pio  mcp3008.pio  mcp3008_6ch_full.pio  mic.c  mic.h  sound.c  sound.h  usb.c  usb.h  usb_common.c  usb_common.h  usb_mic.c  usb_mic.h  usb_setup.c  usb_setup.h  usb_standard.h
src/usb/: common.h  descriptors.h  device.h  endpoint.h  send_descriptor.h  standard_request.h  structs.h  vendor_specific.h
src_/: CMakeLists.txt  dev_lowlevel.c  dev_lowlevel.h  main.c  memo.txt  micarr.c  micarr.h  usb_multicore.c  usb_multicore2.c  usb_multicore3.c  usb_multicore4.c
tud/: CMakeLists.txt  main.c
usb/: CMakeLists.txt  dev_lowlevel_ctr.h  main.c
